k8s/services.yml
kind: Service
apiVersion: v1

metadata:
  name: todo-service
  namespace: two-tier-ns

spec:
   selector:
     app: two-tier-app
   
   ports:
     - protocol: TCP
       port: 5000
       targetPort: 5000
