k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: todo-ingress
  namespace: two-tier-ns

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /login
            backend:
              service:
                name: todo-service
                port:
                  number: 5000
